ecmascript/parser/tests/typescript-errors/tsc/es6/destructuring/destructuringObjectBindingPatternAndAssignment3/input.ts.stderr
error[1005]: Expected ','
 --> $DIR/tests/typescript-errors/tsc/es6/destructuring/destructuringObjectBindingPatternAndAssignment3/input.ts:2:7
  |
2 | var {h?} = { h?: 1 };
  |       ^

error[1162]: An object member cannot be declared optional
 --> $DIR/tests/typescript-errors/tsc/es6/destructuring/destructuringObjectBindingPatternAndAssignment3/input.ts:2:15
  |
2 | var {h?} = { h?: 1 };
  |               ^

error: Unexpected token `}`. Expected an identifier
 --> $DIR/tests/typescript-errors/tsc/es6/destructuring/destructuringObjectBindingPatternAndAssignment3/input.ts:6:7
  |
6 | var {1} = { 1 };
  |       ^

error[1005]: Expected a semicolon
 --> $DIR/tests/typescript-errors/tsc/es6/destructuring/destructuringObjectBindingPatternAndAssignment3/input.ts:6:15
  |
6 | var {1} = { 1 };
  |               ^

error: Unexpected token `}`. Expected an identifier
 --> $DIR/tests/typescript-errors/tsc/es6/destructuring/destructuringObjectBindingPatternAndAssignment3/input.ts:7:12
  |
7 | var {"prop"} = { "prop": 1 };
  |            ^

